--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,7 +13,13 @@
       /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 6vw)); */
       clip-path: polygon(0 0, 100% 0, 100% 76%, 0 93%);
 
+
   }
+  .clip-your-needful-style1 {
+    clip-path: polygon(0 13%, 100% 0%, 100% 88%, 0% 100%);
+
+
+}
 
 }
 
